2-alb-wordpress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:673996792329:certificate/cceb4d2e-a1cf-4163-8d79-e339d0c213a3
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - host: wp.ignitehome.online
      http:
        paths:
          - path: /admin
            pathType: Exact
            backend:
              service:
                name: wordpress
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: wordpress-ingress
#   namespace: wordpress
#   annotations:
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
#     alb.ingress.kubernetes.io/scheme: internet-facing
# spec:
#   ingressClassName: alb
#   rules:
#     - host: wp.ignitehome.online
#       http:
#         paths:
#           - path: /admin
#             pathType: Exact
#             backend:
#               service:
#                 name: wordpress
#                 port:
#                   number: 80
